--- a/css/estiloPokedex.css
+++ b/css/estiloPokedex.css
@@ -26,13 +26,10 @@ body{
 	transition: all ease 0.05s;
 }
 
-/* div{
-    border: 2px solid black;
-} */
 
-@media (max-width: 600px) {
-body{
-		height: 100vh;
-		margin:0;
-	}	
-    }
+h1{
+	color: white;
+	text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 5px darkblue;
+}
+
+
