--- a/css/estiloPokemon.css
+++ b/css/estiloPokemon.css
@@ -10,6 +10,9 @@ body{
     height: 100vh;
     margin: 0;
 }
+#row1{
+height: 200px;
+}
 
 .cajas-flechas img:active{
 	box-shadow: 0 5px #666;
@@ -32,4 +35,14 @@ h1{
 	text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 5px darkblue;
 }
 
+div{
+	border: 1px solid red;
+}
+
+@media only screen and (max-width: 600px) {
+	#img-pokemon{
+		height: 200px;
+	}
+
+}
 
