--- a/css/estiloPokemon.css
+++ b/css/estiloPokemon.css
@@ -34,14 +34,12 @@ h1{
 }
 
 
-div{
+/* div{
 	border: 1px solid red;
-}
+} */
 
 @media only screen and (max-width: 600px) {
-	#img-pokemon{
-		height: 80%;
-	}
+
 
 }
 
